API defined and permission model added
