# routes/api_v1.js
@@ -1,7 +1,8 @@
 import express from 'express';
-import email from '../services/comrate/api';
+import comApi from '../services/comrate/api';
 import log from '../services/log/api';
 import auth from '../services/auth/api';
+import rbac from '../services/auth/roleApi';
 
 const pJson = require('../package.json');
 
@@ -22,8 +23,15 @@ router.get('/', (req,res) => {
     });
 });
 
-/* Your API Calls */
-router.get('/helloworld', email.helloworld);
+router.get('/comments/:domain', [auth.isBearerAuthenticated, rbac.middle], comApi.getComments);
+router.get('/comment/:domain/:id', auth.isBearerAuthenticated, comApi.getComment); //check own in function
+router.post('/comment/:domain', [auth.isBearerAuthenticated, rbac.middle], comApi.postComment);
+router.put('/comment/:domain/:id', auth.isBearerAuthenticated, comApi.putComment); //check own in function
+router.delete('/comment/:domain/:id', auth.isBearerAuthenticated, comApi.deleteComment); //check own in function
+router.get('/target/:domain/', [auth.isBearerAuthenticated, rbac.middle], comApi.getOverallTarget);
+router.post('/target/:domain', [auth.isBearerAuthenticated, rbac.middle], comApi.createTarget);
+router.patch('/target/:domain/:id', [auth.isBearerAuthenticated, rbac.middle], comApi.patchTarget);
+router.delete('/target/:domain/:id', [auth.isBearerAuthenticated, rbac.middle], comApi.deleteTarget);
 
 /**
  * Log API Calls
